--- a/Vocable/Features/Keyboard/FunctionKeyboardKeyCollectionViewCell.xib
+++ b/Vocable/Features/Keyboard/FunctionKeyboardKeyCollectionViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="KeyboardKeyCollectionViewCell" id="0X8-Lg-Y4e" customClass="KeyboardKeyCollectionViewCell" customModule="Vocable" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="" id="0X8-Lg-Y4e" customClass="FunctionKeyboardKeyCollectionViewCell" customModule="Vocable" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="269" height="218"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -21,10 +21,10 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                         <variation key="heightClass=compact">
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                         </variation>
                     </label>
                 </subviews>
@@ -37,7 +37,7 @@
             </constraints>
             <size key="customSize" width="269" height="218"/>
             <connections>
-                <outlet property="textLabel" destination="57z-XF-Jde" id="Nk2-FV-Elh"/>
+                <outlet property="textLabel" destination="57z-XF-Jde" id="EWU-Ds-XQ6"/>
             </connections>
             <point key="canvasLocation" x="296.37681159420293" y="190.17857142857142"/>
         </collectionViewCell>
